<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MachineAcivity">

    <TextView
        android:id="@+id/txt_machine_progress_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_machine_detail_progress"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_machine_available" />

    <TextView
        android:id="@+id/txt_machine_machineIdValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="txt_machine_machineIdValue"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_machine_machineId" />

    <TextView
        android:id="@+id/txt_machine_nameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="txt_machine_nameValue"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="180dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_machine_name"
        tools:layout_editor_absoluteX="201dp" />

    <TextView
        android:id="@+id/txt_machine_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="txt_machine_available"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_machine_available_label" />

    <TextView
        android:id="@+id/txt_machine_machineStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="txt_machine_machineStatus"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="180dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/txt_machine_machineStatus_label"
        tools:layout_editor_absoluteX="257dp" />

    <TextView
        android:id="@+id/txt_machine_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="txt_machine_progress"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_machine_progress_label" />

    <TextView
        android:id="@+id/txt_machine_machineId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_machine_detail_machineId"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_machine_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_machine_detail_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="180dp"
        tools:layout_editor_absoluteX="222dp" />

    <TextView
        android:id="@+id/txt_machine_available_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_machine_detail_available"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_machine_machineIdValue" />

    <TextView
        android:id="@+id/txt_machine_machineStatus_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_machine_detail_machineStatus"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_machine_nameValue"
        tools:layout_editor_absoluteX="223dp" />
</androidx.constraintlayout.widget.ConstraintLayout>